--- a/paginas/index.html
+++ b/paginas/index.html
@@ -61,8 +61,8 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="src/cafearabica.jpg" class="cafearabica" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <div class="titulocafe"><h3>Café Arábico.</h3></div>
+            <div class="carousel-caption d-none d-md-block texto">
+              <div class="titulocafe"><h3>Café Arábico</h3></div>
               <div class="textocafes"><h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quis nulla aliquam repellat incidunt? Placeat tempora sapiente possimus laboriosam, nobis ratione distinctio consequatur neque corporis vel aliquid dolor facilis beatae.</h5></div>
             </div>
           </div>
