--- a/paginas/newproduct.html
+++ b/paginas/newproduct.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Nerko+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/newproduct.css">
     <link rel="icon" type="imagem/svg+xml" href="src/coffee-bean-filled-roast-brew-svgrepo-com.svg">
-    <title>Byte Coffee</title>
+    <title>ByteCafé</title>
 </head>
 <body>
     <div class="left-side">
