--- a/paginas/newproduct.html
+++ b/paginas/newproduct.html
@@ -31,11 +31,11 @@
                 <img id="clear" src="src/clear-svgrepo-com.svg" style="display:none ;">
                 <img src="src/search-svgrepo-com (1).svg">
             </div>
-            <select id="select">
-                <option value="all">Categoria</option>
-                <option value="id">ID</option>
-                <option value="name">Nome</option>
-            </select>
+            <div class="select">
+                <p class="categoria">Categoria</p>
+                <p class="ecommerce">E-commerce</p>
+                <p class="fisico">Físico</p>
+            </div>
             <button onclick=""><img src="src/plus-large-svgrepo-com.svg">Produto</button>
         </div>
         <div class="lower-side">
