--- a/paginas/newproduct.html
+++ b/paginas/newproduct.html
@@ -54,6 +54,43 @@
             </table>
         </div>
     </div>
+    <div class="modal-new">
+        <div class="fundo">
+            <div class="modal">
+                <div class="modal-header">
+                    <h5>Adicionar Produto</h5>
+                    <button type="button"><img src="src/close-md-svgrepo-com.svg"></button>
+                </div>
+                <br>
+                <div class="corpo">
+                    <form id="produtoForm">
+                        <input type="hidden" id="id">
+                        <div class="nome-input">
+                            <label for="nome">Nome do Produto</label>
+                            <input type="text" id="nome">
+                        </div>
+                        <div class="img-input">
+                            <label for="imagem">Url da Imagem</label>
+                            <input type="text" id="imagem">
+                            <img id="imagePreview" class="img" src="" alt="Prévia da Imagem" style="display: none;">
+                        </div>
+                        <div class="categoria-input">
+                            <label for="tipo-input">Categoria</label>
+                            <select id="tipo-input">
+                                <option value="fisico">Físico</option>
+                                <option value="ecommerce">E-commerce</option>
+                            </select>
+                        </div>
+                        <div class="preco-input">
+                            <label for="preco">Preço</label>
+                            <input type="number" id="preco">
+                        </div>
+                        <button type="submit">Adicionar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="scripts/newproduct.js"></script>
 </body>
 </html>
