--- a/paginas/newproduct.html
+++ b/paginas/newproduct.html
@@ -54,7 +54,7 @@
             </table>
         </div>
     </div>
-    <div class="modal-new">
+    <div class="modal-new" style="display: none;">
         <div class="fundo">
             <div class="modal">
                 <div class="modal-header">
