--- a/paginas/newproduct.html
+++ b/paginas/newproduct.html
@@ -36,7 +36,7 @@
                 <p class="ecommerce">E-commerce</p>
                 <p class="fisico">Físico</p>
             </div>
-            <button onclick=""><img src="src/plus-large-svgrepo-com.svg">Produto</button>
+            <button onclick="showmodal()"><img src="src/plus-large-svgrepo-com.svg">Produto</button>
         </div>
         <div class="lower-side">
             <table >
@@ -54,7 +54,7 @@
             </table>
         </div>
     </div>
-    <div class="modal-new" style="display: none;">
+    <div class="modal-new" id="modal-new" style="display: none;">
         <div class="fundo">
             <div class="modal">
                 <div class="modal-header">
