--- a/paginas/newproduct.html
+++ b/paginas/newproduct.html
@@ -48,16 +48,17 @@
                         <th>Quantidade</th>
                         <th>Preço</th>
                         <th>Catálogo</th>
+                        <th></th>
                     </tr>
                 </thead>
             </table>
         </div>
     </div>
-    <div class="modal-new" id="modal-new" style="display: none;">
+    <div class="modal-new" id="modal-new" style="display: flex;">
         <div class="fundo">
             <div class="modal">
                 <div class="modal-header">
-                    <h5>Adicionar Produto</h5>
+                    <h2>Adicionar Produto</h2>
                     <button type="button" onclick="mostraModal()"><img src="src/close-md-svgrepo-com.svg"></button>
                 </div>
                 <br>
