--- a/paginas/newproduct.html
+++ b/paginas/newproduct.html
@@ -54,12 +54,21 @@
                         <th></th>
                     </tr>
                 </thead>
+                <tbody>
+                    <td>11</td>
+                    <td>nome</td>
+                    <td>comida</td>
+                    <td>10</td>
+                    <td>12</td>
+                    <td>catálogo</td>
+                    <td>
+                </tbody>
             </table>
         </div>
     </div>
-    <div class="modal-new" id="modal-new" style="display: flex;">
+    <div class="modal-new" id="modal-new" style="display: none;">
         <div class="fundo">
-            <div class="modal">
+            <div class="modal" id="inner-modal">
                 <div class="modal-header">
                     <h2>Adicionar Produto</h2>
                     <button type="button" onclick="mostraModal()"><img src="src/close-md-svgrepo-com.svg"></button>
