--- a/paginas/cardapio.html
+++ b/paginas/cardapio.html
@@ -22,7 +22,7 @@
         <h1 class="text-center mb-4">Cardápio de Produtos</h1>
         <div class="row" id="menuContainer">
             
-            <!-- div fake para ter como parametro para o css 
+            <!-- div fake para ter como parametro para o css E JS 
             
             <div class="col-md-4 mb-4"></div>
                 <div class="card card-menu">
@@ -35,6 +35,7 @@
                 </div>
             </div> -->
             <!-- Os cards dos produtos serão adicionados aqui -->
+
         </div>
     </div>
 
