cadastra produtos no bd e criacao das rotas

--- a/paginas/newproduct.html
+++ b/paginas/newproduct.html
@@ -100,7 +100,7 @@
                         </div>
                         <div class="preco-input">
                             <label>Preço</label>
-                            <input type="number"  id="precoProduto">
+                            <input type="number" step="0.01" id="precoProduto">
                         </div>
                         <button type="submit">Adicionar</button>
                     </form>
