--- a/paginas/newproduct.html
+++ b/paginas/newproduct.html
@@ -51,7 +51,7 @@
                         <th>Quantidade</th>
                         <th>Preço</th>
                         <th>Catálogo</th>
-                        <th></th>
+                        <th>acoes</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -60,8 +60,12 @@
                     <td>comida</td>
                     <td>10</td>
                     <td>12</td>
-                    <td>catálogo</td>
+                    <td>categoria</td>
                     <td>
+                        <button>deletar</button>
+                        <button>editar</button>
+
+                    </td>
                 </tbody>
             </table>
         </div>
