--- a/paginas/login.html
+++ b/paginas/login.html
@@ -49,16 +49,16 @@
             </div>
             <form>
                 <div class="nome-cadsatro">
-                    <input type="text" class="nome-input" id="nome" placeholder="Nome" >
+                    <input type="text" class="nome-input" id="nomeCadastro" placeholder="Nome" >
                 </div>
                 <div>
-                    <input type="text" class="sobrenome-input" id="sobrenome" placeholder="sobrenome">
+                    <input type="text" class="sobrenome-input" id="sobrenomeCadastro" placeholder="sobrenome">
                 </div>
                 <div class="email-cadsatro">
-                    <input type="email" class="email-input" id="email-cadastro" placeholder="Email" >
+                    <input type="email" class="email-input" id="email-cadastro emailCadastro" placeholder="Email" >
                 </div>
                 <div class="senha-cadsatro">
-                    <input type="password" class="senha-input" id="senha-cadastro" placeholder="Senha">
+                    <input type="password" class="senha-input" id="senha-cadastro senhaCadastro" placeholder="Senha">
                     <div class="requisitos-senha">
                         <label class="error-label" id="requisitos" style="display: none;">
                             <p>A senha deve conter:</p>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="confirmar-senha-cadsatro">
-                    <input type="password" class="confirmar-senha-input" id="confirmar-senha" placeholder="Confirmar Senha" >
+                    <input type="password" class="confirmar-senha-input" id="confirmar-senha confirmarSenha" placeholder="Confirmar Senha" >
                     <div class="compare-senha">
                         <label id="senhadiferente" class="error-label" style="display: none;">As senhas não são iguais.</label>
                     </div>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="btn-signup">    
                     <button class="btn btn-primary" id="botaoCadastrar">Cadastrar</button>
-                    <a href="#login" onclick="mostrarLogin_Cadastro()">Ja tenho uma conta</a>
+                    <a href="#login" id="jaPossuiConta">Ja tenho uma conta</a>
                 </div>
             </form>
         </div>
@@ -88,7 +88,6 @@
             <img src="src//kitescritorio_moidos.webp">
         </aside>
     </div>
-    <script src="scripts/cadastroProduto.js"></script>
     <script src="scripts/login.js"></script>
 
 </body>
