--- a/paginas/login.html
+++ b/paginas/login.html
@@ -55,10 +55,10 @@
                     <input type="text" class="sobrenome-input" id="sobrenomeCadastro" placeholder="sobrenome">
                 </div>
                 <div class="email-cadsatro">
-                    <input type="email" class="email-input" id="email-cadastro emailCadastro" placeholder="Email" >
+                    <input type="email" class="email-input" id="emailCadastro" placeholder="Email" >
                 </div>
                 <div class="senha-cadsatro">
-                    <input type="password" class="senha-input" id="senha-cadastro senhaCadastro" placeholder="Senha">
+                    <input type="password" class="senha-input" id="senhaCadastro" placeholder="Senha">
                     <div class="requisitos-senha">
                         <label class="error-label" id="requisitos" style="display: none;">
                             <p>A senha deve conter:</p>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="confirmar-senha-cadsatro">
-                    <input type="password" class="confirmar-senha-input" id="confirmar-senha confirmarSenha" placeholder="Confirmar Senha" >
+                    <input type="password" class="confirmar-senha-input" id="confirmarSenha" placeholder="Confirmar Senha" >
                     <div class="compare-senha">
                         <label id="senhadiferente" class="error-label" style="display: none;">As senhas não são iguais.</label>
                     </div>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="btn-signup">    
                     <button class="btn btn-primary" id="botaoCadastrar">Cadastrar</button>
-                    <a href="#login" id="jaPossuiConta">Ja tenho uma conta</a>
+                    <a href="#login" id="mostrarLogin_Cadastro">Ja tenho uma conta</a>
                 </div>
             </form>
         </div>
