--- a/paginas/newproduct.html
+++ b/paginas/newproduct.html
@@ -72,7 +72,7 @@
         </div>
     </div>
 
-    <div class="modal-new" id="modal-new" style="display: none;">
+    <div class="modal-new" id="modal-new" style="display: flex;">
         <div class="fundo">
             <div class="modal" id="inner-modal">
                 <div class="modal-header">
@@ -89,12 +89,12 @@
                         </div>
                         <div id="divdescricaoProduto">
                             <label for="descricaoProduto">Descrição do Produto</label>
-                            <textarea id="descricaoProduto"></textarea>
+                            <textarea id="descricaoProduto" cols="30"></textarea>
                         </div>
                         <div class="img-input">
                             <label for="imagemUrlProduto">URL da Imagem</label>
                             <input type="text" id="imagemUrlProduto">
-                            <img id="imagePreview" class="img" src="" alt="Prévia da Imagem" style="display: none;">
+                            <img id="imagePreview" class="img" src="" alt="Prévia da Imagem">
                         </div>
                         <div class="categoria-input">
                             <label for="Modal_categoriaProduto">Categoria</label>
