--- a/paginas/login.html
+++ b/paginas/login.html
@@ -25,11 +25,11 @@
             </div>
             <form>
                 <div class="email-login">
-                    <input type="email" name="email" class="email-input" id="email-login" placeholder="Email" required>
+                    <input type="email" name="email" class="email-input" id="emailLogin" placeholder="Email" required>
                     <p id="usuarioIncorreto" style="color: red;display: none;"> Usuario nao encontrado</p>
                 </div>
                 <div class="senha-login">
-                    <input type="password" class="senha-input" id="senha-login" placeholder="Senha" required>
+                    <input type="password" class="senha-input" id="senhaLogin" placeholder="Senha" required>
                     <input type="checkbox"
                     id="mostrarSenha" name="mostrarSenha" >
                     <label for="mostrarSenha" class="label-mostrar">
