--- a/paginas/cardapio.html
+++ b/paginas/cardapio.html
@@ -21,10 +21,9 @@
 
     <div class="container my-5">
         <h1 class="text-center mb-4">Cardápio de Produtos</h1>
+
         <div class="row" id="menuContainer">
-
-
-            <!-- <div class="iconMenu">
+            <div class="iconMenu">
                 <a href="index.html">
                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" color="black" class="bi bi-house-fill icon-nav" viewBox="0 0 16 16">
                     <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293z"/>
@@ -45,7 +44,8 @@
                 </a>
             </div>
 
-            <div class="col-md-4 mb-4" id="prodDiv1">
+            
+            <!-- <div class="col-md-4 mb-4" id="prodDiv1">
                 <div class="card card-menu" id="prodDiv2">
                     a<img src="${prod.imagemUrl || 'https://via.placeholder.com/300'}" class="card-img-top" alt="${prod.nome}">
                     <div class="card-body">
