--- a/paginas/index.html
+++ b/paginas/index.html
@@ -21,19 +21,21 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="cadastroProduto.html">CadastroProdutos</a>
+                        <a class="nav-link active" id="CadastroProduto" aria-current="page" href="newproduct.html">Cadastro Produtos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sobre</a>
+                      
+                        <a class="nav-link" >Sobre</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cardapio.html">Cardápio</a>
+                      <a class="nav-link" id="navCardapioUm" href="cardapio.html" >Cardápio</a>
+                      <a class="nav-link" id="navCardapioDois" href="login.html" >Cardápio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contato</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="btn btn-primary" href="login.html">Login/Cadastro</a>
+                    <li class="nav-item" id="navBotaoLogin">
+                        <a class="btn btn-primary" id="botaoLogin" href="login.html">Login/Cadastro</a>
                     </li>
                 </ul>
             </div>
@@ -125,6 +127,36 @@
     </footer>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+     <!-- <script> document.addEventListener('DOMContentLoaded', () => {
+      const verificaLogin = (event) => {
+          event.preventDefault(); // Impede o comportamento padrão do link
+          const email = localStorage.getItem("email")
+          const senha = localStorage.getItem('senha')
+          if (email.length && senha.length) {
+              console.log(localStorage.getItem('email') && localStorage.getItem('senha'));
+              document.getElementById('navBotaoLogin').style.display = 'none'; 
+              location.href = 'cardapio.html'; 
+          } else {
+              location.href = 'login.html'; 
+          }
+      };
+  
+      document.getElementById("navCardapio").addEventListener('Click', verificaLogin);
+  }); -->
+  <!-- <script>const email = localStorage.getItem("email")?localStorage.getItem("email"):[]
+    const senha = localStorage.getItem('senha')? localStorage.getItem('senha'): []
+    if (email?.length && senha?.length) {
+        document.getElementById("navCardapioDois").style.display = "none"
+        document.getElementById("navCardapioUm").style.display = "block"
+    } else {
+        document.getElementById("navCardapioDois").style.display = "block"
+        document.getElementById("navCardapioUm").style.display = "none"
+    }</script> -->
+
+    // <scrip >
+      
+    // </script>
+
+    <script src="scripts/index.js" />
 </body>
 </html>
