adiciona pagiona de carrinho

--- a/paginas/newproduct.html
+++ b/paginas/newproduct.html
@@ -72,7 +72,7 @@
         </div>
     </div>
 
-    <div class="modal-new" id="modal-new" style="display: flex;">
+    <div class="modal-new" id="modal-new" style="display: none;">
         <div class="fundo">
             <div class="modal" id="inner-modal">
                 <div class="modal-header">
