--- a/paginas/index.html
+++ b/paginas/index.html
@@ -125,38 +125,6 @@
             <p class="text-muted">&copy; 2024 Minha Página. Todos os direitos reservados.</p>
         </div>
     </footer>
-
-    <!-- Bootstrap JS -->
-     <!-- <script> document.addEventListener('DOMContentLoaded', () => {
-      const verificaLogin = (event) => {
-          event.preventDefault(); // Impede o comportamento padrão do link
-          const email = localStorage.getItem("email")
-          const senha = localStorage.getItem('senha')
-          if (email.length && senha.length) {
-              console.log(localStorage.getItem('email') && localStorage.getItem('senha'));
-              document.getElementById('navBotaoLogin').style.display = 'none'; 
-              location.href = 'cardapio.html'; 
-          } else {
-              location.href = 'login.html'; 
-          }
-      };
-  
-      document.getElementById("navCardapio").addEventListener('Click', verificaLogin);
-  }); -->
-  <!-- <script>const email = localStorage.getItem("email")?localStorage.getItem("email"):[]
-    const senha = localStorage.getItem('senha')? localStorage.getItem('senha'): []
-    if (email?.length && senha?.length) {
-        document.getElementById("navCardapioDois").style.display = "none"
-        document.getElementById("navCardapioUm").style.display = "block"
-    } else {
-        document.getElementById("navCardapioDois").style.display = "block"
-        document.getElementById("navCardapioUm").style.display = "none"
-    }</script> -->
-
-    // <scrip >
-      
-    // </script>
-
-    <script src="scripts/index.js" />
+    <script src="scripts/index.js" ></script>
 </body>
 </html>
