--- a/paginas/carrinho.html
+++ b/paginas/carrinho.html
@@ -31,20 +31,20 @@
                     <h5>Resumo do Pedido</h5>
                 </div>
                 <div class="card-body">
-                    <h6 class="d-flex justify-content-between">
+                    <h6 class="d-flex justify-content-between" >
                         <span>Subtotal</span>
-                        <span>R$ 355,00</span>
+                        <span id="subtotal"> </span>
                     </h6>
-                    <h6 class="d-flex justify-content-between">
+                    <h6 class="d-flex justify-content-between" >
                         <span>Frete</span>
-                        <span>R$ 20,00</span>
+                        <span id="frete"> </span>
                     </h6>
                     <hr>
-                    <h5 class="d-flex justify-content-between">
+                    <h5 class="d-flex justify-content-between" >
                         <span>Total</span>
-                        <span>R$ 375,00</span>
+                        <span id="precototal"> </span>
                     </h5>
-                    <a href="#" class="btn btn-primary w-100 mt-3">Finalizar Compra</a>
+                    <a href="#" class="btn btn-primary w-100 mt-3" id="finalizarCompra">Finalizar Compra</a>
                 </div>
             </div>
         </div>
