--- a/paginas/index.html
+++ b/paginas/index.html
@@ -34,6 +34,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contato</a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="carrinho.html" id="navCarrinho"> carrinho</a>
+                      <a class="nav-link" href="login.html" id="navCarrinho2"> carrinho</a>
+                    </li>
                     <li class="nav-item" id="navBotaoLogin">
                         <a class="btn btn-primary" id="botaoLogin" href="login.html">Login/Cadastro</a>
                     </li>
