changes on newproducts

--- a/paginas/newproduct.html
+++ b/paginas/newproduct.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="left-side">
-        <img src="src/pixelcut-export.png" alt="Logo">
+        <img src="src/logo_NoBackground_fixed.png" alt="Logo">
         <br>
         <nav>
             <a href="index.html">Home</a>
@@ -67,6 +67,7 @@
                             <button class="botaoEditar" data-id="11">Editar</button>
                         </td>
                     </tr>
+                    <!---->
                 </tbody>
             </table>
         </div>
