Sobrenome input / login page

--- a/paginas/login.html
+++ b/paginas/login.html
@@ -51,7 +51,7 @@
                 <div class="nome-cadsatro">
                     <input type="text" class="nome-input" id="nomeCadastro" placeholder="Nome" >
                 </div>
-                <div>
+                <div class="sobrenome-cadsatro">
                     <input type="text" class="sobrenome-input" id="sobrenomeCadastro" placeholder="sobrenome">
                 </div>
                 <div class="email-cadsatro">
