changes new product

--- a/paginas/newproduct.html
+++ b/paginas/newproduct.html
@@ -46,7 +46,6 @@
                         <th>ID</th>
                         <th>Produto</th>
                         <th>Categoria</th>
-                        <th>Quantidade</th>
                         <th>Preço</th>
                         <th>Ações</th>
                     </tr>
@@ -100,8 +99,8 @@
                         <div class="categoria-input">
                             <label for="Modal_categoriaProduto">Categoria</label>
                             <select id="Modal_categoriaProduto">
-                                <option value="fisico">Físico</option>
-                                <option value="ecommerce">E-commerce</option>
+                                <option value="Físico">Físico</option>
+                                <option value="E-commerce">E-commerce</option>
                             </select>   
                         </div>
                         <div class="preco-input">
