changes on newproduct page

--- a/paginas/newproduct.html
+++ b/paginas/newproduct.html
@@ -36,7 +36,7 @@
                 <option value="todos">Todos</option>
                 <option value="fisico">Físico</option>
                 <option value="ecommerce">E-commerce</option>
-            </select>  
+            </select>
             <button id="Produto"><img src="src/plus-large-svgrepo-com.svg" alt="Adicionar Produto">Produto</button>
         </div>
         <div class="lower-side">
@@ -62,8 +62,8 @@
                         <td>10</td>
                         <td>12</td>
                         <td>
-                            <button class="botaoDeletar" data-id="11">Deletar</button>
-                            <button class="botaoEditar" data-id="11">Editar</button>
+                            <button class="botaoDeletar" data-id="11"><img src="src/trash-bin-trash-svgrepo-com.svg"></button>
+                            <button class="botaoEditar" data-id="11"><img src="src/edit-svgrepo-com.svg"></button>
                         </td>
                     </tr>
                     <!---->
