--- a/paginas/paginainicial.html
+++ b/paginas/paginainicial.html
@@ -4,60 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ByteCafé</title>
-    <link rel="icon" type="imagem/svg+xml" href="src/coffee-bean-filled-roast-brew-svgrepo-com.svg">
+    <link rel="icon" type="image/svg+xml" href="src/coffee-bean-filled-roast-brew-svgrepo-com.svg">
     <link rel="stylesheet" href="./styles/paginainicial.css">
 </head>
+
 <body>
-    <!-- Barra de Navegação -->
-    <h1>oi</h1>
-    
     <header>
-        <div class="slider">
-             <div class="slides">
-                <!--Radio Buttons(botões dos slides)-->
-                <input type="radio" name="radio-btn" id="radio1">
-                <input type="radio" name="radio-btn" id="radio2">
-                <input type="radio" name="radio-btn" id="radio3">
-                <input type="radio" name="radio-btn" id="radio4">
-                <!--Fim-->
-
-                <!--Slides Images-->
-                <div class="slide first" class="imagem1">
-                        <img src="src/imagem 1 pagina principal.jpg" alt="imagem 1"/>
-                </div>
-                <div class="slide" class="imagem2">
-                    <img src="src/imagem 2 pagina principal.jpg" alt="imagem 2"/>
-                </div>
-                <div class="slide" class="imagem3">
-                    <img src="src/imagem 3 pagina principal.jpg" alt="imagem 3"/>
-                </div>
-                <div class="slide" class="imagem4">
-                    <img src="src/cafearabica.jpg" alt="imagem 4"/>
-                </div>
-                <!--Fim slides-->
-
-                <!--Navigation auto-->
-                <div class="navigation-auto">
-                    <div class="auto-btn1"></div>
-                    <div class="auto-btn2"></div>
-                    <div class="auto-btn3"></div>
-                    <div class="auto-btn4"></div>
-                </div>
-             </div>
-             <div class="manual-navigation">
-                <label for="radio1" class="manual-btn"></label>
-                <label for="radio2" class="manual-btn"></label>
-                <label for="radio3" class="manual-btn"></label>
-                <label for="radio4" class="manual-btn"></label>
-             </div>
-        </div>
+        <nav class="navbar" id="navbar">
+            <div class="navbar-logo">
+                <a href="paginainicial.html" id="logo-link">
+                    <img src="src/logo_NoBackground_fixed.png" alt="Logo" id="logo">
+                </a>
+            </div>
+            <div class="navbar-links">
+                <a href="cardapio.html">Cardápio</a>
+                <a href="carrinho.html">Carrinho</a>
+                <a href="login.html">Login</a>
+            </div>
+        </nav>
     </header>
-    <!-- Rodapé -->
-    <footer>
-        <div class="rodape">
-            direito bla bala    
+
+    <div class="container">
+        <div class="top-left">
+            <h2>Venha experimentar o Capuccino</h2>
         </div>
-    </footer>
-    <script src="scripts/paginainicial.js" ></script>
+        <div class="middle-image">
+            <img src="src/capuccino_png.png" alt="Imagem Exemplo">
+        </div>
+        <div class="right-text">
+            <p>Este é um texto explicativo que fica à direita da imagem. Aqui você pode adicionar mais informações ou descrever o que está na imagem.</p>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="top-left">
+            <h2>Venha experimentar o Capuccino</h2>
+        </div>
+        <div class="middle-image">
+            <img src="src/capuccino_png.png" alt="Imagem Exemplo">
+        </div>
+        <div class="right-text">
+            <p>Este é um texto explicativo que fica à direita da imagem. Aqui você pode adicionar mais informações ou descrever o que está na imagem.</p>
+        </div>
+    </div>
+    
+    <footer>
+        <div class="footer-container">
+            <div class="footer-column">
+                <h3>Redes Sociais</h3>
+                <a href="https://instagram.com" target="_blank">Instagram</a>
+                <a href="https://facebook.com" target="_blank">Facebook</a>
+                <a href="https://twitter.com" target="_blank">X/Twitter</a>
+            </div>
+            <div class="footer-column">
+                <h3>Contato</h3>
+                <p>WhatsApp: <a href="">+55 (41) 99295-2584</a></p>
+                <p>Telefone: <a href="">(41) 99295-2584</a></p>
+                <p>Email: <a href="">contato@bytecafe.com</a></p>
+            </div>
+        </div>
+        <div class="footer-phrase">
+            <p>©2024 Minha Página. Todos os direitos reservados.</p>
+        </div>
+    </footer> 
+
+    <script src="scripts/paginainicial.js"></script>
 </body>
 </html>
