--- a/paginas/paginainicial.html
+++ b/paginas/paginainicial.html
@@ -9,11 +9,12 @@
 </head>
 
 <body>
+    <!-- Navbar -->
     <header>
         <nav class="navbar" id="navbar">
             <div class="navbar-logo">
                 <a href="paginainicial.html" id="logo-link">
-                    <img src="src/logo_NoBackground_fixed.png" alt="Logo" id="logo">
+                    <img src="src/logo_NoBackground_fixed.png" alt="Logo do ByteCafé" id="logo">
                 </a>
             </div>
             <div class="navbar-links">
@@ -24,30 +25,40 @@
         </nav>
     </header>
 
-    <div class="container">
+    <!-- Banner Intro -->
+    <div class="intro-banner">
+        <h4>Cáfe/Delivery</h4>
+        <img src="src/logo_NoBackground_fixed.png" alt="Logo do ByteCafé">
+        <p>Bem-vindo ao ByteCafé! Aqui você encontra o melhor café, um cardápio diversificado e um atendimento rápido e eficiente. Nossa missão é oferecer uma experiência deliciosa e acolhedora. Explore nosso menu, monte seu pedido e desfrute do sabor único de um café feito com carinho.</p>
+    </div>
+    
+    <!-- Seções de Conteúdo -->
+    <div class="container1">
         <div class="top-left">
-            <h2>Venha experimentar o Capuccino</h2>
+            <h2>Entre na nossa loja!</h2>
         </div>
-        <div class="middle-image">
-            <img src="src/capuccino_png.png" alt="Imagem Exemplo">
+        <div class="middle-image1">
+            <img src="src/capuccino_png.png" alt="Capuccino">
         </div>
         <div class="right-text">
-            <p>Este é um texto explicativo que fica à direita da imagem. Aqui você pode adicionar mais informações ou descrever o que está na imagem.</p>
+            <p> Descubra uma experiência única com os melhores cafés da cidade. Cada xícara é feita com carinho e dedicação, esperando por você para saborear momentos inesquecíveis!</p>
         </div>
     </div>
 
-    <div class="container">
-        <div class="top-left">
-            <h2>Venha experimentar o Capuccino</h2>
-        </div>
-        <div class="middle-image">
-            <img src="src/capuccino_png.png" alt="Imagem Exemplo">
-        </div>
-        <div class="right-text">
+    <div class="container2">
+        <div class="left-text">
             <p>Este é um texto explicativo que fica à direita da imagem. Aqui você pode adicionar mais informações ou descrever o que está na imagem.</p>
         </div>
+        <div class="middle-image2">
+            <img src="src/capuccino_png.png" alt="Capuccino">
+        </div>
+        <div class="top-right">
+            <h2>Venha experimentar o Capuccino</h2>
+        </div>
     </div>
-    
+
+
+    <!-- Rodapé -->
     <footer>
         <div class="footer-container">
             <div class="footer-column">
@@ -66,7 +77,7 @@
         <div class="footer-phrase">
             <p>©2024 Minha Página. Todos os direitos reservados.</p>
         </div>
-    </footer> 
+    </footer>
 
     <script src="scripts/paginainicial.js"></script>
 </body>
