--- a/paginas/paginainicial.html
+++ b/paginas/paginainicial.html
@@ -56,6 +56,32 @@
             <h2>Venha experimentar o Capuccino</h2>
         </div>
     </div>
+    <br>
+    <!--Menu-->
+    <div class="container3">
+        <div class="menu">
+            <h1>Cafés</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, minima quae doloribus quas recusandae quibusdam iure, odio excepturi error a ex magnam voluptatibus earum tenetur laboriosam. Deleniti, eveniet vero. Numquam!</p>
+        </div>
+        <div class="tabela menu-buttons">
+            <button onclick="showMenu('quentes')">Quentes</button>
+            <button onclick="showMenu('gelados')">Gelados</button>
+            <button onclick="showMenu('frappes')">Frappes</button>
+        </div>
+        
+    <!-- Seção dos menus -->
+    <div id="quentes" class="menu-conteudo">
+        <p>Café americano</p>
+    </div>
+
+    <div id="gelados" class="menu-conteudo">
+
+    </div>
+
+    <div id="frappes" class="menu-conteudo">
+
+    </div>
+</div>
 
 
     <!-- Rodapé -->
