--- a/paginas/login.html
+++ b/paginas/login.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="btn-login">
                     <button class="btn btn-primary" id="botaoEntrar">Entrar</button>
-                    <a href="#cadastro" id="mostrarLogin_Cadastro">Não tenho uma conta</a>
+                    <a href="#cadastro" id="mostrarCadastro">Não tenho uma conta</a>
                 </div>
             </form>
         </div>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="btn-signup">    
                     <button class="btn btn-primary" id="botaoCadastrar">Cadastrar</button>
-                    <a href="#login" id="mostrarLogin_Cadastro">Ja tenho uma conta</a>
+                    <a href="#login" id="mostrarLogin">Ja tenho uma conta</a>
                 </div>
             </form>
         </div>
