--- a/paginas/carrinho.html
+++ b/paginas/carrinho.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="src/coffee-bean-filled-roast-brew-svgrepo-com.svg">
     <title>Carrinho de Compras</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
 <div class="container mt-5">
+    <a href="index.html" class="btn btn-primary" style="position: absolute;"><img src="./src/left-arrow-svgrepo-com.svg"></a>
     <h2 class="text-center mb-4">Carrinho de Compras</h2>
     
     <div class="row">
