--- a/paginas/cardapio.html
+++ b/paginas/cardapio.html
@@ -21,8 +21,9 @@
 <body>
 
     <div class="container my-5">
+        <a href="index.html" class="btn btn-primary" style="position: absolute;"><img src="./src/left-arrow-svgrepo-com.svg"></a>
         <h1 class="text-center mb-4">Cardápio de Produtos</h1>
-
+        <a href="carrinho.html" class="btn btn-primary" style="position: absolute;right: 5%; top: 8%;"><img src="./src/shopping-cart-svgrepo-com.svg"></a>
         <div class="row" id="menuContainer">
             
             <div class="col-md-4 mb-4" id="prodDiv1">
