--- a/paginas/carrinho.html
+++ b/paginas/carrinho.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="container mt-5">
-    <a href="index.html" class="btn btn-primary" style="position: absolute;"><img src="./src/left-arrow-svgrepo-com.svg"></a>
+    <a href="cardapio.html" class="btn btn-primary" style="position: absolute;"><img src="./src/left-arrow-svgrepo-com.svg"></a>
     <h2 class="text-center mb-4">Carrinho de Compras</h2>
     
     <div class="row">
