--- a/paginas/index.html
+++ b/paginas/index.html
@@ -18,15 +18,15 @@
                 </a>
             </div>
             <div class="navbar-links" id="barra1">
+                <a href="newproduct.html" id="cadastrarProduto">Cadastrar Produto</a>
                 <a href="cardapio.html">Cardápio</a>
                 <a href="carrinho.html">Carrinho</a>
                 <a href="login.html" onclick="limparLocalStorage()">sair</a>
-                <a href="newproduct.html" id="cadastrarProduto">Cadastrar Produto</a>
             </div>
             <div class="navbar-links" id="barra2">
                 <a href="login.html">Cardápio</a>
                 <a href="login.html">Carrinho</a>
-                <a href="login.html"  >login</a>
+                <a href="login.html">login</a>
             </div>
             
         </nav>
@@ -93,7 +93,7 @@
 
     <!-- Rodapé -->
     <footer>
-        <div class="footer-container">
+        <div class="footer-container" id="contatos">
             <div class="footer-column">
                 <h3>Redes Sociais</h3>
                 <a href="https://instagram.com" target="_blank">Instagram</a>
