--- a/paginas/index.html
+++ b/paginas/index.html
@@ -27,7 +27,7 @@
             <div class="navbar-links" id="barra2">
                 <a href="login.html">Cardápio</a>
                 <a href="login.html">Carrinho</a>
-                <a href="login.html"  >login</a>
+                <a href="login.html">Login</a>
             </div>
         </nav>
     </header>
